# first-rust-project

./: .gitignore  README.md
web_scrapper/: Cargo.toml
web_scrapper/src/: main.rs
