[package]
name = "web_scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.8"
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

